# asyncbeats-playground

./: .gitignore  README.md  flake.nix
client/: index.html  package.json
client-tmp/: package.json  pnpm-lock.yaml
client-tmp/src/: App.tsx
client/src/: App.css  App.tsx
libsora-sample/: main.py
middle-server/: Cargo.toml  ai1.md  ai2.md  before_origin.md
middle-server-tmp/: Cargo.toml
middle-server-tmp/src/: applications.rs  errors.rs  models.rs
middle-server-tmp/src/applications/: pcm.rs  server_to_client.rs  window.rs
middle-server-tmp/src/errors/: handler.rs
middle-server-tmp/src/handlers/: ws.rs
middle-server-tmp/src/models/: audio.rs  packet.rs  shared_state.rs
middle-server/src/: main.rs  models.rs
middle-server/src/applications/: client_to_server.rs  pcm.rs
middle-server/src/errors/: handler.rs
middle-server/src/handlers/: ws.rs
middle-server/src/models/: ws.rs
pyo3-sample/: Cargo.toml
server/: Cargo.toml
server-tmp/: Cargo.toml
server-tmp/src/: application.rs  errors.rs  main.rs  models.rs
server-tmp/src/application/: analyzer.rs  streamer.rs
server-tmp/src/errors/: handler.rs  streamer.rs
server-tmp/src/handlers/: ws.rs
server-tmp/src/models/: audio.rs
server/src/: errors.rs  main.rs
server/src/application/: analyzer.rs  streamer.rs
server/src/errors/: analyzer.rs
server/src/handlers/: ws.rs
server/src/models/: audio.rs
