[package]
name = "middle-server-tmp"
version = "0.1.0"
edition = "2024"

[dependencies]
# network
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.44.2", features = ["full"] }
# error
thiserror = "2.0.12"
# analyze
numpy = "0.25.0"
pyo3 = {version = "0.25.1", features = ["auto-initialize"] }
# messagepack
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
# json
serde_json = "1.0.140"
# cors
tower-http = { version = "0.6.4", features = ["cors"] }
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# websocket client
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
tungstenite = "0.27.0"
